<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="500dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="200dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="300dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="400dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonClear"
        style="@style/mainButtons"
        android:onClick="clearInputOnClick"
        android:text="@string/actionClear"
        android:textColor="#A93226"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/specialButtons"
        android:id="@+id/buttonBrackets"
        android:text="@string/actionBracket"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        android:onClick="actionOnClick"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEvaluate"
        style="@style/specialButtons"
        android:text="@string/actionEvaluate"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        android:onClick="evaluateOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDot"
        style="@style/mainButtons"
        android:text="@string/actionDot"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        android:onClick="actionOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNum0"
        style="@style/mainButtons"
        android:text="@string/num0"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        android:onClick="putNumberOrSubOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonReverse"
        style="@style/mainButtons"
        android:text="@string/actionReverse"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="actionOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPlus"
        style="@style/specialButtons"
        android:text="@string/actionPlus"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        android:onClick="actionOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNum3"
        style="@style/mainButtons"
        android:text="@string/num3"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        android:onClick="putNumberOrSubOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNum2"
        style="@style/mainButtons"
        android:text="@string/num2"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        android:onClick="putNumberOrSubOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNum1"
        style="@style/mainButtons"
        android:text="@string/num1"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="putNumberOrSubOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMinus"
        style="@style/specialButtons"
        android:text="@string/actionMinus"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        android:onClick="actionOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNum6"
        style="@style/mainButtons"
        android:text="@string/num6"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        android:onClick="putNumberOrSubOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNum5"
        style="@style/mainButtons"
        android:text="@string/num5"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        android:onClick="putNumberOrSubOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNum4"
        style="@style/mainButtons"
        android:text="@string/num4"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="putNumberOrSubOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMultiplication"
        style="@style/specialButtons"
        android:text="@string/actionMultiplication"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        android:onClick="actionOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNum9"
        style="@style/mainButtons"
        android:text="@string/num9"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        android:onClick="putNumberOrSubOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNum8"
        style="@style/mainButtons"
        android:text="@string/num8"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        android:onClick="putNumberOrSubOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNum7"
        style="@style/mainButtons"
        android:text="@string/num7"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="putNumberOrSubOnClick"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDivision"
        style="@style/specialButtons"
        android:text="@string/actionDiv"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        android:onClick="actionOnClick"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPercentage"
        style="@style/specialButtons"
        android:text="@string/actionPercentage"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        android:onClick="actionOnClick"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>